...
              children: [
                Form(
                  child: Column(
                    children: [
                      TextFormField(
                        textInputAction: TextInputAction.next,
                        key: const Key("emailLoginField"),
                        controller: emailController,
                        style: GoogleFonts.nunito(),
                        decoration: InputDecoration(
                          hintText: 'Email',
                          hintStyle: heading6.copyWith(color: grey),
                          border: const OutlineInputBorder(
...
                        ),
                      ),
                      const SizedBox(
                        height: 32,
                      ),
                      TextFormField(
                        key: const Key("passwordLoginField"),
                        controller: passwordController,
                        obscureText: !passwordVisible,
                        style: GoogleFonts.nunito(),
                        decoration: InputDecoration(
                          hintText: 'Mot de passe',
                          hintStyle: heading6.copyWith(color: grey),
...
                  ),
                ),
                const SizedBox(
                  height: 64,
                ),
                GestureDetector(
                  key: const Key("loginButton"),
                  onTap: () {
                    FocusManager.instance.primaryFocus?.unfocus();
                    BlocProvider.of<LoginBloc>(context).add(
                        LoginClickOnLoginEvent(
                            emailController.text, passwordController.text));
                  },
...
