...
          padding: const EdgeInsets.all(50.0),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            crossAxisAlignment: CrossAxisAlignment.stretch,
            children: <Widget>[
              GestureDetector(
                key: const Key("loginBigButton"),
                onTap: () {
                  BlocProvider.of<AccountBloc>(context)
                      .add(const AccountNavigateEvent("login"));
                },
                child: BigButton(
                    buttonColor: darkBlue,
...
                    textColor: Colors.white),
              ),
              const Padding(
                padding: EdgeInsets.only(top: 30.0),
              ),
              GestureDetector(
                key: const Key("registerBigButton"),
                onTap: () {
                  BlocProvider.of<AccountBloc>(context)
                      .add(const AccountNavigateEvent("register"));
                },
                child: BigButton(
                  buttonColor: darkBlue,
...
